.gh-logs/artifacts-21994192198/home/runner/work/URMS/URMS/builds/screenshots/smoke-result.err
/home/runner/work/URMS/URMS/Tests/playwright/smoke.cjs:182
    page.on('pageerror', err => { try { pageErrors.push({ message: String(err && (err.message || err)), stack: (err && err.stack) ? String(err.stack).slice(0,2000) : null, ts: Date.now() }); } catch(e){ try{ internalErrors.push(String(e && (e.message||e))); }catch(_){} } );
                                                                                                                                                                                                                                                                                ^

SyntaxError: Unexpected token ')'
    at wrapSafe (node:internal/modules/cjs/loader:1472:18)
    at Module._compile (node:internal/modules/cjs/loader:1501:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1613:10)
    at Module.load (node:internal/modules/cjs/loader:1275:32)
    at Module._load (node:internal/modules/cjs/loader:1096:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:164:12)
    at node:internal/main/run_main_module:28:49

Node.js v20.19.0
